OSSN - OPEN SOURCE SOCIAL NETWORK 4.0b3

CHANGES:

* Questionable behavior on too small profile cover #638
* Oinitial crashing if OssnComments module is disabled #645
* Notifications crashing if OssnMessages module is disabled #646
* Make post text and tagged friends inline.
* Datepicker display glitch on administrator/edituser #637

OSSN - OPEN SOURCE SOCIAL NETWORK 4.0b3

BUGFIXES:

* Fix entity likes view.

OSSN - OPEN SOURCE SOCIAL NETWORK 4.0b1

BUGFIXES:

* Getting entity is failed #DEV-33
* Fix creating default object from empty value for user object
* Theme(Oinitial) still marked to require 3.0 in xml #DEV-36
* Fix language stings when for unblocking user.
* Hide notification box when we open topbar dropwn menu #617
* Hide groups cover buttons on mobile.
* Reposition/Change Cover buttons on top of notification #622
* Admin profiles should be unblockable by 'normal' members #625
* Delete groups.php.rej
* Need to clear file path after uploading the file #626
* Pagination offset should be better protected #627
* Loosing typed in data when clicking Terms and Conditions link #620
* Overlapping issue with longer names on profile page #630
* Unused pagebar skeleton when ads are disabled #628
* Pictures in single view are drifting rightwards out of place #629

Enhancements:



OSSN - OPEN SOURCE SOCIAL NETWORK 4.0b

Bugfixes:

* Trigger callback ('comment', 'load') only if user is loggedin $arsalanshah
* Allow standalone image post in wall #611
* Deleting the current profile pic/cover doesn't update icon_time #59
* Missing back button to photos #570
* Cover photo dimensions restriction #93
* When getting user/object/annotation its entities are limited to 10, removed limit.
* Flash player for video on mobile #D-13 #614
* A message recieve issue on OssnChat.

Optimization:

* Load google maps, token input and tinymce only where its required.
* OssnUser::isFriend, reduce queries to one query.
* OssnUser::getFriends, reduce queries.